<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey_300"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/placeholder_movie_details_image"
                android:scaleType="centerCrop"
                android:id="@+id/movie_backdrop"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="150dp"
                    android:id="@+id/movie_poster"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/placeholder_movie_item_image"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="15dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/movie_title"
                        android:textSize="20sp"
                        android:lines="1"
                        android:maxLength="24"
                        android:layout_marginTop="10dp"
                        android:text="Movie_TitleMovie_TitleMovie_"
                        />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/movie_rate"
                            android:textSize="18sp"
                            android:text="@string/Movie_Rate"
                            android:layout_marginTop="3dp"
                            />

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/ic_star_half_black"
                            android:layout_gravity="center"
                            android:layout_marginLeft="10dp"
                            />

                    </LinearLayout>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/movie_date"
                        android:textSize="18sp"
                        android:text="@string/Movie_date"
                        android:layout_marginTop="3dp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/movie_type"
                        android:textSize="18sp"
                        android:text="@string/Movie_adult"
                        android:layout_marginTop="3dp"
                        />

                </LinearLayout>


            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/cardview_dark_background"
                android:layout_marginTop="10dp"
                />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                >
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_share_black"
                    android:scaleType="centerCrop"
                    />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_star_border_black"
                    android:scaleType="centerCrop"
                    android:layout_marginLeft="70dp"
                    android:id="@+id/add_favorites_movies"
                    />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/cardview_dark_background"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:text="@string/Movie_OverView"
                android:gravity="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:text="@string/Movie_OverView"
                android:gravity="center"
                android:id="@+id/movie_overview"

                />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorAccent"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:text="@string/Movie_Traillers"
                android:gravity="center"
                />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/traillers"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:id="@+id/movie_trailler"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/cardview_dark_background"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:text="Movie Review"
                android:gravity="center"
                />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/review"
                android:layout_gravity="center"
                android:id="@+id/movie_review"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/cardview_dark_background"
                android:layout_marginTop="10dp"
                />
        </LinearLayout>


    </ScrollView>

</LinearLayout>